[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/investigation_v3.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/case_3/invest_1/astation_day1.gd" type="Script" id=2]
[ext_resource path="res://sprites/background/alvivstation_bg.jpg" type="Texture" id=3]
[ext_resource path="res://scenes/character_scenes/character_egorich.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/character_scenes/character_layton.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/character_scenes/character_temichlegs.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="back_ground" type="AnimatedSprite" parent="."]
position = Vector2( -47.005, -11.951 )
scale = Vector2( 0.570527, 0.570527 )
frames = SubResource( 1 )
centered = false

[node name="characters_all" type="Node2D" parent="."]
position = Vector2( -1, -115 )

[node name="character_egorich" parent="characters_all" instance=ExtResource( 4 )]
visible = false
position = Vector2( 1, 115 )

[node name="character_lentoln" parent="characters_all" instance=ExtResource( 6 )]
visible = false
position = Vector2( -11.9055, 158.74 )

[node name="character_temich" parent="characters_all" instance=ExtResource( 7 )]
visible = false
position = Vector2( 9.52441, 190.488 )

[node name="investigation_screen" parent="." instance=ExtResource( 1 )]
